Archive2/6a/c3d3ad7145c3c0/main.cpp
#include <iostream>
#include <cmath>
#include <typeinfo>
 
int main()
{
    int& (*fpi)(int*) = [](auto* a)->auto& { return *a; };
    [a](){std::cout<<a<<'\n';}();
}